win-webserver-hostnetwork.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: win-webserver-hostnw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: win-webserver-hostnw
  template:
    metadata:
      labels:
        app: win-webserver-hostnw
      name: win-webserver-hostnw
    spec:
      containers:
      - name: windowswebserver
        image: mcr.microsoft.com/windows/servercore:ltsc2019
        imagePullPolicy: IfNotPresent
        ports:
          - name: hostport
            containerPort: 80
            hostPort: 80
        command:
        - powershell.exe
        - -command
        - "<#code used from https://gist.github.com/wagnerandrade/5424431#> ; $$listener = New-Object System.Net.HttpListener ; $$listener.Prefixes.Add('http://*:80/') ; $$listener.Start() ; $$callerCounts = @{} ; Write-Host('Listening at http://*:80/') ; while ($$listener.IsListening) { ;$$context = $$listener.GetContext() ;$$requestUrl = $$context.Request.Url ;$$clientIP = $$context.Request.RemoteEndPoint.Address ;$$response = $$context.Response ;Write-Host '' ;Write-Host('> {0}' -f $$requestU [...]
        resources:
          requests:
            memory: "1024Mi"
            cpu: "1000m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
      nodeSelector:
        beta.kubernetes.io/os: windows
